feat: add swagger, fix: models
