# server/src/resources/watch-history/watch-history.model.js
@@ -4,15 +4,15 @@ const Schema = mongoose.Schema;
 const WatchHistory = new Schema(
   {
     userId: { type: Schema.Types.ObjectId, ref: 'User', required: true },
-    kinopoiskId: { type: String, required: true },
+    kinopoiskId: { type: String, required: true, unique: true },
     watchedAt: { type: Date }
   },
   { collection: 'watchHistory', versionKey: false }
 );
 
 const toResponse = watchHistory => {
-  const { id, userId, kinopoiskId, watchedAt } = watchHistory;
-  return { id, userId, kinopoiskId, watchedAt };
+  const { userId, kinopoiskId, watchedAt } = watchHistory;
+  return { userId, kinopoiskId, watchedAt };
 };
 
 module.exports = {
