# server/src/resources/watch-later/watch-later.db.repository.js
@@ -1,6 +1,6 @@
 const mongoose = require('mongoose');
 const { WatchLater } = require('./watch-later.model');
-const { NOT_FOUND_ERROR } = require('../../errors/appErrors');
+const { NOT_FOUND_ERROR, DUPLICATE } = require('../../errors/appErrors');
 const ENTITY_NAME = 'watch-later';
 
 const getAll = async () => WatchLater.find({});
@@ -16,8 +16,20 @@ const get = async userId => {
   return later;
 };
 
-const create = async history =>
-  WatchLater.create({ ...history, watchedAt: Date.now() });
+const create = async history => {
+  const existingHistory = await WatchLater.findOne({
+    kinopoiskId: history.kinopoiskId
+  });
+  if (existingHistory) {
+    throw new DUPLICATE(`${ENTITY_NAME} kinopoiskId`, {
+      kinopoiskId: history.kinopoiskId
+    });
+  }
+  return WatchLater.create({
+    ...history,
+    watchedAt: Date.now()
+  });
+};
 
 const remove = async id => {
   if (!mongoose.Types.ObjectId.isValid(id)) {
