# server/src/utils/validation/schemas.js
@@ -9,9 +9,7 @@ const userSchema = Joi.object({
     .min(3)
     .max(30)
     .required(),
-  password: Joi.string().regex(
-    /^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[_@$!%*?&])[A-Za-z\d_@$!%*?&]{8,}$/
-  ),
+  password: Joi.string().regex(/^(?=.*[A-Z])(?=.*\d)[A-Za-z\d]{6,12}$/),
   subscription: Joi.string().regex(/^(basic|premium)$/)
 });
 
